--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -17,11 +17,7 @@
     letter-spacing: -1px;
     margin-bottom: 0;
     float: left;
-	
-    &,
-    &:visited {
-        color: $grey-color-dark;
-    }
+	color:$brand-color;
 }
 
 .site-nav {
@@ -169,9 +165,6 @@
  */
 .page-content {
     padding: $spacing-unit 0;
-	background-color:#DCDCDC;
-	background:url(/image/timg1.jpg);
-	background-size:100%;
 }
 
 .page-heading {
@@ -185,7 +178,6 @@
     > li {
         margin-bottom: $spacing-unit;
     }
-	background-color:#DCDCDC;
 }
 
 .post-meta {
@@ -204,8 +196,7 @@
  * Posts
  */
 .post-header {
-    #margin-bottom: $spacing-unit;
-	background-color:#DCDCDC;
+    margin-bottom: $spacing-unit;
 }
 
 .post-title {
@@ -219,7 +210,7 @@
 }
 
 .post-content {
-    #margin-bottom: $spacing-unit;
+    margin-bottom: $spacing-unit;
 
     h2 {
         font-size: 32px;
@@ -244,6 +235,5 @@
             font-size: 18px;
         }
     }
-	background-color:#DCDCDC;
-	
+	#background-color:#DCDCDC;
 }
