--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,7 +9,8 @@ dl, dd, ol, ul, figure {
 }
 
 p,h1,h2,h3,h4,h5,h6,ol,ul{
-	color:#ffffff;
+	#color:#ffffff;
+	color:#080808;
 }
 
 p>code,li>pre,li>code,em>code{
@@ -29,8 +30,8 @@ body {
     -o-font-feature-settings: "kern" 1;
     font-feature-settings: "kern" 1;
     font-kerning: normal;
-	#background-color:#1A1A1A;
-	background-color:#080808;
+	background-color:#F0F0F0;
+	#background-color:#080808;
 }
 
 
